<resources>
    <string name="app_name">Vacuum Movies</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="login">Войти</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="click_to_login">Нажмите для входа в систему</string>
    <string name="click_to_register">Нажмите для регистрации</string>
    <string name="logout">Выйти</string>
    <string name="enter_password">Введите пароль</string>
    <string name="settings">Настройки</string>
    <string name="info">Информация</string>
    <string name="profile">Профиль</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="add_film">Добавить фильм</string>
    <string name="update_film">Изменить фильм</string>
    <string name="film_name">Название</string>
    <string name="film_date">Год выпуска</string>
    <string name="film_director">Режиссер</string>
    <string name="films">Фильмы</string>

    <string name="saved_super_user_key">is_super_user</string>
    
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saving">Сохранение...</string>
    <string name="loading">Загрузка...</string>
    <string name="loginName">Логин</string>
    <string name="film_description">Описание</string>
    <string name="trailerLink">Ссылка на трейлер</string>
</resources>