<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_film"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/film_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:gravity="start|center_vertical"
                android:hint="@string/film_name"
                android:padding="16dp"
                android:textColor="@color/lavender" />

            <EditText
                android:id="@+id/film_year"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:gravity="start|center_vertical"
                android:hint="@string/film_date"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/lavender" />

            <EditText
                android:id="@+id/film_director"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:gravity="start|center_vertical"
                android:hint="@string/film_director"
                android:padding="16dp"
                android:textColor="@color/lavender" />

            <Button
                android:id="@+id/add_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Добавить фильм" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>