<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".Fragments.UpdateFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/main_color"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_film"
                android:textAlignment="center"
                android:textColor="@color/lavender"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/update_image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/uploadimage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/film_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/film_name"
                    android:textColor="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/film_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/film_date"
                    android:inputType="number"
                    android:textColor="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/film_director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/film_director"
                    android:textColor="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/film_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/film_description"
                    android:textColor="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/film_trailerLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trailerLink"
                    android:textColor="@color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/update_film"
                android:textColorHint="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>